--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -20,7 +20,7 @@
     margin-bottom: 20px;
   }
   
-  input[type="text"] {
+  input[type="search"] {
     padding: 10px;
     width: 70%;
     border: 1px solid #ccc;
@@ -34,10 +34,11 @@
   
   .details-list li {
     background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    border: 1px solid #443b3b;
+    border-radius: 7px;
     padding: 10px;
     margin-bottom: 10px;
+    box-shadow: 0px 1px 2px black;
   }
   
   .details-list li strong {
@@ -48,5 +49,11 @@
     input[type="text"] {
       width: 100%;
     }
+  }
+  .action-buttons{
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    margin: 5px;
   }
   
